--- a/src/app/shared/print-list/print-list.component.html
+++ b/src/app/shared/print-list/print-list.component.html
@@ -1,10 +1,10 @@
-<div class="bg-white overflow-hidden">
-  <div class="px-4 py-5 sm:px-6">
+<div class="bg-white overflow-hidden mb-1">
+  <div class="px-4 py-2 sm:px-6">
     <h3 class="text-lg leading-6 font-medium text-gray-900">
       {{ header }}
     </h3>
   </div>
-  <div class="px-4 py-5 sm:p-0">
+  <div class="px-4 py-2 sm:p-0">
     <dl>
       <div
         *ngFor="let item of items; trackBy: trackByKey"
